crates/lexer/src/snapshots/lexer__tests__raw_string_single_end.snap
---
source: crates/lexer/src/tests.rs
snapshot_kind: text
---
Ok(
    [
        Token {
            kind: RAW_STRING,
            offset: 0,
        },
        Token {
            kind: END_OF_FILE,
            offset: 8,
        },
    ],
)
