crates/lexer/src/snapshots/lexer__tests__raw_string_then_string.snap
---
source: crates/lexer/src/tests.rs
snapshot_kind: text
---
Ok(
    [
        Token {
            kind: RAW_STRING,
            offset: 0,
        },
        Token {
            kind: STRING,
            offset: 8,
        },
        Token {
            kind: END_OF_FILE,
            offset: 10,
        },
    ],
)
