crates/lexer/src/snapshots/lexer__tests__reserved.snap
---
source: crates/lexer/src/tests.rs
snapshot_kind: text
---
Ok(
    [
        Token {
            kind: TICK,
            offset: 0,
        },
        Token {
            kind: WHITESPACE,
            offset: 1,
        },
        Token {
            kind: COMMA,
            offset: 2,
        },
        Token {
            kind: END_OF_FILE,
            offset: 3,
        },
    ],
)
