crates/lexer/src/snapshots/lexer__tests__string_escape.snap
---
source: crates/lexer/src/tests.rs
snapshot_kind: text
---
Ok(
    [
        Token {
            kind: STRING,
            offset: 0,
        },
        Token {
            kind: END_OF_FILE,
            offset: 28,
        },
    ],
)
