crates/lexer/src/snapshots/lexer__tests__string_space_escape.snap
---
source: crates/lexer/src/tests.rs
snapshot_kind: text
---
Ok(
    [
        Lexed {
            kind: STRING,
            offset: 0,
        },
        Lexed {
            kind: END_OF_FILE,
            offset: 27,
        },
    ],
)
