crates/lexer/src/snapshots/lexer__tests__upper_source.snap
---
source: crates/lexer/src/tests.rs
snapshot_kind: text
---
Ok(
    [
        Token {
            kind: SOURCE_PROPER,
            offset: 0,
        },
        Token {
            kind: WHITESPACE,
            offset: 5,
        },
        Token {
            kind: SOURCE_PROPER,
            offset: 6,
        },
        Token {
            kind: WHITESPACE,
            offset: 14,
        },
        Token {
            kind: SOURCE_PROPER,
            offset: 15,
        },
        Token {
            kind: WHITESPACE,
            offset: 24,
        },
        Token {
            kind: SOURCE_PROPER,
            offset: 25,
        },
        Token {
            kind: END_OF_FILE,
            offset: 34,
        },
    ],
)
